<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margindefault">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHomeTeam"
            android:layout_width="@dimen/Team_image_size"
            android:layout_height="@dimen/Team_image_size"
            android:layout_marginStart="@dimen/margindefault"
            android:layout_marginTop="@dimen/margindefault"
            android:contentDescription="@string/imagemsenegal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHomeTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margindefault"
            android:layout_marginBottom="@dimen/margindefault"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivHomeTeam"
            app:layout_constraintStart_toStartOf="@+id/ivHomeTeam"
            app:layout_constraintTop_toBottomOf="@+id/ivHomeTeam"
            tools:text="Home Team" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHomeTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
            app:layout_constraintEnd_toStartOf="@+id/tvVersus"
            app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam"
            tools:text="99" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versus"

            app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAwayTeam"
            android:layout_width="@dimen/Team_image_size"
            android:layout_height="@dimen/Team_image_size"
            android:layout_marginTop="@dimen/margindefault"
            android:layout_marginEnd="@dimen/margindefault"
            android:contentDescription="@string/imagemholanda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAwayTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margindefault"

            app:layout_constraintEnd_toEndOf="@+id/ivAwayTeam"
            app:layout_constraintStart_toStartOf="@+id/ivAwayTeam"
            app:layout_constraintTop_toBottomOf="@+id/ivAwayTeam"
            tools:text="Away Team" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAwayTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/ivAwayTeam"
            app:layout_constraintEnd_toStartOf="@+id/ivAwayTeam"
            app:layout_constraintStart_toEndOf="@+id/tvVersus"
            app:layout_constraintTop_toTopOf="@+id/ivAwayTeam"
            tools:text="99" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>